--- a/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/locale/zh_Hans/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-26 15:46+0800\n"
+"POT-Creation-Date: 2024-11-20 20:41+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -187,6 +187,9 @@ msgstr "应用图标"
 
 msgid "App Desc"
 msgstr "应用描述"
+
+msgid "Is Hidden"
+msgstr "是否隐藏"
 
 msgid "Manager"
 msgstr "管理员"
