feat(auth): use sha256 auth instead of plain text

--- a/locale/zh_Hans/LC_MESSAGES/django.po
+++ b/locale/zh_Hans/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-11-29 21:14+0800\n"
+"POT-Creation-Date: 2024-12-18 15:18+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -176,8 +176,8 @@ msgstr "应用名称"
 msgid "App Code"
 msgstr "应用ID"
 
-msgid "App Secret (Encoded)"
-msgstr "应用密码(加密)"
+msgid "App Secret"
+msgstr "应用密码"
 
 msgid "App Url"
 msgstr "应用访问地址"
@@ -352,17 +352,14 @@ msgstr ""
 "审核ID: %(audit_id)s\n"
 "审核时间: %(creation_time)s\n"
 
-msgid "App Auth Params is not Json"
-msgstr "应用鉴权参数不是JSON"
-
-msgid "App Auth Params Not Exist"
+msgid "App Auth Headers Not Exist"
 msgstr "应用鉴权参数不存在"
 
 msgid "App Not Exist"
 msgstr "应用不存在"
 
-msgid "App Code or Secret Incorrect"
-msgstr "应用ID或者密钥不正确"
+msgid "Signature Invalid"
+msgstr "签名非法"
 
 msgid "Auth Token Invalid"
 msgstr "认证 Token 非法"
